fix: body overflow:hidden 삭제

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -97,7 +97,6 @@ body {
   height: 100vh;
   margin: 0;
   background-color: black;
-  overflow: hidden;
   touch-action: auto;
   box-sizing: border-box;
 }
